--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="RKMatrix, software development, web development, mobile apps, Android development, iOS development, UI/UX design, website design, branding, software solutions, custom websites, mobile application development, startup tech, digital agency, IT company India, Baberu tech, Banda software, full-stack development, app developers India, responsive websites, modern web design, payroll software, HR management system, employee payroll, payroll automation, salary processing, leave management, attendance tracking, HR software India, payroll services for small business, payroll app development" />
   <meta name="robots" content="index, follow" />
   <link rel="icon" type="image/png" href="images/rklogo.png" />
-  <title>RKMatrix - Software Solutions</title>
+  <title>RKMatrix - Innovative Software Solutions for Modern Businesses</title>
   <meta name="description" content="RKMatrix delivers innovative software solutions including websites, Android and iOS apps tailored for modern businesses." />
   <meta name="keywords" content="RKMatrix, software solutions, website development, android app, ios app, mobile applications" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
