--- a/index.html
+++ b/index.html
@@ -103,12 +103,11 @@
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1100px; margin: 40px auto 0 auto; align-items: flex-start; gap: 40px;">
       <div style="flex: 1 1 400px; text-align: left; color: #ccc; font-size: 18px;">
         <p><i class="fas fa-envelope" style="color: #00bcd4; margin-right: 10px;"></i><strong>Email:</strong> <a href="mailto:rkmatrixpvt@gmail.com" style="color: #00bcd4;">RKMatrixPvt@gmail.com</a></p>
-        <p><i class="fas fa-phone" style="color: #4caf50; margin-right: 10px;"></i><strong>Phone:</strong> +91-9582161944 ,+91-8127444881 </p>
-        <p><i class="fas fa-map-marker-alt" style="color: #e91e63; margin-right: 10px;"></i><strong>Location:</strong> Baberu, Banda, Uttar Pradesh, India</p>
+        <p><i class="fas fa-phone" style="color: #4caf50; margin-right: 10px;"></i><strong>Phone:</strong> +91-9582161944 ,+91-8115122893 ,+91-7398789686 </p>
+        <p><i class="fas fa-map-marker-alt" style="color: #e91e63; margin-right: 10px;"></i><strong>Location:</strong> FH4, Happy Homes Apartment, Juhi Kalan, Saket Nagar, Kanpur, Uttar Pradesh 208014, India</p>
       </div>
       <div style="flex: 1 1 600px;">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14530.51815820794!2d80.7045!3d25.5475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfbf4f4f4f4f5%3A0xabcdef1234567890!2sBaberu%2C%20Uttar%20Pradesh%20210121%2C%20India!5e0!3m2!1sen!2sin!4v1680000000000" 
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3572.8107148290087!2d80.3109638752543!3d26.429584276938396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c475095b8044f%3A0xff2aa500d52556d3!2sHappy%20Homes%20Apartment!5e0!3m2!1sen!2sin!4v1752341102497!5m2!1sen!2sin"  
           width="100%" height="300" style="border: 0; border-radius: 8px;" allowfullscreen="" loading="lazy">
         </iframe>
       </div>
