--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="RKMatrix delivers innovative software solutions..." />
-  <meta name="keywords" content="RKMatrix, software development, web development, mobile apps, Android development, iOS development, UI/UX design, website design, branding, software solutions, custom websites, mobile application development, startup tech, digital agency, IT company India, Baberu tech, Banda software, full-stack development, app developers India, responsive websites, modern web design, payroll software, HR management system, employee payroll, payroll automation, salary processing, leave management, attendance tracking, HR software India, payroll services for small business, payroll app development" />
+  
+<!-- RKMatrix Organization Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "RKMatrix",
+    "url": "https://www.rkmatrix.com",
+    "logo": "https://www.rkmatrix.com/images/rklogo.png",
+    "founder": "RKMatrix", 
+    "foundingDate": "2023",
+    "location": {
+  "@type": "Place",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "FH4, Happy Homes Apartment, Juhi Kalan, Saket Nagar",
+    "addressLocality": "Kanpur",
+    "addressRegion": "Uttar Pradesh",
+    "postalCode": "208014",
+    "addressCountry": "India"
+  }
+},
+    "description": "RKMatrix is a software solutions company specializing in innovative web and mobile application development, delivering professional and creative digital experiences."
+  }
+  </script>
+
+<meta name="keywords" content="RKMatrix, software development, web development, mobile apps, Android development, iOS development, UI/UX design, website design, branding, software solutions, custom websites, mobile application development, startup tech, digital agency, IT company India, Baberu tech, Banda software, full-stack development, app developers India, responsive websites, modern web design, payroll software, HR management system, employee payroll, payroll automation, salary processing, leave management, attendance tracking, HR software India, payroll services for small business, payroll app development" />
   <meta name="robots" content="index, follow" />
   <link rel="icon" type="image/png" href="images/rklogo.png" />
   <title>RKMatrix - Innovative Software Solutions for Modern Businesses</title>
