--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 RKMatrix. All rights reserved.</p>
-  </footer>
+   <footer>
+  <p>&copy; 2025 RKMatrix. All rights reserved. | <a href="RKMatrixTermsAndConditions.html" style="color: #00bcd4;">Terms & Conditions</a></p>
+</footer>
+
 
   <script>
     function toggleMenu() {
