--- a/RKMatrixTermsAndConditions.html
+++ b/RKMatrixTermsAndConditions.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RKMatrix - Terms and Conditions</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+   <link rel="icon" type="image/png" href="images/rklogo.png" />
   <style>
     * {
       margin: 0;
