--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
 
   <script>
+    document.addEventListener('contextmenu', event => event.preventDefault());
     function toggleMenu() {
       document.getElementById('mobileNav').classList.toggle('active');
     }
