--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+    <!-- ✅ HEADER -->
     <header id="mainHeader">
         <div class="logo">
             <img src="images/rklogo.png" alt="RKMatrix Logo" />
@@ -55,21 +55,27 @@
             <span></span>
             <span></span>
         </div>
+        <!-- Desktop nav -->
         <nav>
-            <a href="#home" onclick="setActive(this)">Home</a>
-            <a href="#about" onclick="setActive(this)">About</a>
-            <a href="#services" onclick="setActive(this)">Services</a>
-            <a href="#contact" onclick="setActive(this)">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
         </nav>
 
-        <!-- Moved mobile nav inside header -->
+        <!-- Mobile nav -->
         <div class="mobile-nav" id="mobileNav">
-            <a href="#home" onclick="setActive(this); toggleMenu()">Home</a>
-            <a href="#about" onclick="setActive(this); toggleMenu()">About</a>
-            <a href="#services" onclick="setActive(this); toggleMenu()">Services</a>
-            <a href="#contact" onclick="setActive(this); toggleMenu()">Contact</a>
+            <a href="#home" onclick="toggleMenu()">Home</a>
+            <a href="#about" onclick="toggleMenu()">About</a>
+            <a href="#services" onclick="toggleMenu()">Services</a>
+            <a href="#contact" onclick="toggleMenu()">Contact</a>
         </div>
     </header>
+    <!-- 🎉 FESTIVAL BANNER -->
+    <div id="festivalBanner">
+        <span id="festivalMessage"></span>
+        <button onclick="document.getElementById('festivalBanner').style.display='none'">&times;</button>
+    </div>
 
     <section class="hero" id="home">
         <div class="hero-overlay">
@@ -80,6 +86,8 @@
             <img src="images/rkBanner.png" alt="Team working on software solutions" />
         </div>
     </section>
+
+
 
     <section id="about">
         <h2>About RKMatrix</h2>
@@ -131,12 +139,36 @@
     <section id="contact" style="padding: 60px 20px;">
         <h2 style="text-align: center;">Contact Us</h2>
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1100px; margin: 40px auto 0 auto; align-items: flex-start; gap: 40px;">
-            <div style="flex: 1 1 400px; text-align: left; color: #ccc; font-size: 18px;">
-                <p><i class="fas fa-envelope" style="color: #00bcd4; margin-right: 10px;"></i><strong>Email:</strong> <a href="mailto:rkmatrixpvt@gmail.com" style="color: #00bcd4;">RKMatrixPvt@gmail.com</a></p>
-                <p><i class="fas fa-phone" style="color: #4caf50; margin-right: 10px;"></i><strong>Phone:</strong> +91-8115122893 ,+91-7398789686 ,+91-9582161944</p>
-                <p><i class="fas fa-map-marker-alt" style="color: #e91e63; margin-right: 10px;"></i><strong>Location:</strong> FH4, Happy Homes Apartment, Juhi Kalan, Saket Nagar, Kanpur, Uttar Pradesh 208014, India</p>
+
+            <!-- Enquiry Form -->
+            <div style="flex: 1 1 500px; background: #2b2b2b; padding: 30px; border-radius: 10px; color: #fff;">
+                <h3 style="margin-bottom: 20px; color: var(--primary-color);">Send Us an Enquiry</h3>
+                <form id="emailForm">
+                    <label for="name" style="display: block; margin-bottom: 8px;">Name</label>
+                    <input type="text" id="name" name="Name" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: none; border-radius: 5px; background: #444; color: #fff;" autocomplete="off" />
+
+                    <label for="email" style="display: block; margin-bottom: 8px;">Email</label>
+                    <input type="email" id="email" name="Email" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: none; border-radius: 5px; background: #444; color: #fff;" autocomplete="off" />
+
+                    <label for="phone" style="display: block; margin-bottom: 8px;">Phone</label>
+                    <input type="text" id="phone" name="Phone" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: none; border-radius: 5px; background: #444; color: #fff;" autocomplete="off" />
+
+                    <label for="message" style="display: block; margin-bottom: 8px;">Message</label>
+                    <textarea id="message" name="Message" rows="4" required style="width: 100%; padding: 10px; margin-bottom: 20px; border: none; border-radius: 5px; background: #444; color: #fff;"></textarea>
+
+                    <button id="submitBtn" type="submit" style="background-color: var(--primary-color); color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Send Message</button>
+
+                    <div id="formMessage" style="margin-top: 15px; display: none; padding: 10px; border-radius: 5px;"></div>
+                </form>
             </div>
-            <div style="flex: 1 1 600px;">
+
+            <!-- Existing Contact Details and Map -->
+            <div style="flex: 1 1 500px;">
+                <div style="color: #ccc; font-size: 18px; margin-bottom: 20px;">
+                    <p><i class="fas fa-envelope" style="color: #00bcd4; margin-right: 10px;"></i><strong>Email:</strong> <a href="mailto:rkmatrixpvt@gmail.com" style="color: #00bcd4;">RKMatrixPvt@gmail.com</a></p>
+                    <p><i class="fas fa-phone" style="color: #4caf50; margin-right: 10px;"></i><strong>Phone:</strong> +91-8115122893, +91-7398789686, +91-9582161944</p>
+                    <p><i class="fas fa-map-marker-alt" style="color: #e91e63; margin-right: 10px;"></i><strong>Location:</strong> FH4, Happy Homes Apartment, Juhi Kalan, Saket Nagar, Kanpur, Uttar Pradesh 208014, India</p>
+                </div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3572.8107148290087!2d80.3109638752543!3d26.429584276938396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c475095b8044f%3A0xff2aa500d52556d3!2sHappy%20Homes%20Apartment!5e0!3m2!1sen!2sin!4v1752341102497!5m2!1sen!2sin"
                         width="100%" height="300" style="border: 0; border-radius: 8px;" allowfullscreen="" loading="lazy">
                 </iframe>
@@ -144,29 +176,210 @@
         </div>
     </section>
 
+    <!-- Social Icons -->
+    <div class="clean-social-bar" id="socialBar">
+        <a href="https://www.facebook.com/profile.php?id=100063928155512" class="facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <!--<a href="https://twitter.com" class="twitter" target="_blank"><i class="fab fa-twitter"></i></a>-->
+        <a href="https://www.linkedin.com/company/glitter-technologies-pvt-ltd/?viewAsMember=true" class="linkedin" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <!--<a href="https://wa.me/918115122893" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>-->
+    </div>
+
+    <!-- Mobile Toggle Button -->
+    <div class="social-toggle" onclick="toggleSocialBar()">
+        <i class="fas fa-share-alt"></i>
+    </div>
+
+    <div class="clean-contect-bar" id="contactBar">
+        <a href="#" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="#contact" class="contact-icon" title="Contact Us">
+            <i class="fas fa-envelope"></i>
+        </a>
+    </div>
+
     <footer>
         <p>&copy; 2025 RKMatrix. All rights reserved. | <a href="RKMatrixTermsAndConditions.html" style="color: #00bcd4;">Terms & Conditions</a></p>
     </footer>
 
     <script>
+
+        document.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+        });
+
+
+
+        const today = new Date();
+        const currentDate = `${today.getDate()}-${today.getMonth() + 1}`;
+
+        const messages = {
+            "15-8": "🇮🇳 🧡🤍💚 Happy Independence Day! Jai Hind – Team RKMatrix",
+            "19-8": "🧵 Happy Raksha Bandhan! Celebrating love and protection – Team RKMatrix",
+            "7-9": "🪔 Wishing you joy this Ganesh Chaturthi – Team RKMatrix",
+            "2-10": "🙏 Happy Gandhi Jayanti! Peace and progress always – Team RKMatrix",
+            "1-11": "🎇 Get ready for Diwali! Light up your ideas – RKMatrix",
+            "15-11": "🪔 Happy Diwali from RKMatrix! Let's brighten the future together!",
+            "6-10": "🌙 Eid Mubarak! Wishing peace and harmony – Team RKMatrix"
+        };
+
+        const message = messages[currentDate];
+
+        if (message) {
+            const banner = document.getElementById("festivalBanner");
+            document.getElementById("festivalMessage").textContent = message;
+            banner.style.display = "block";
+        }
+
+
+        function toggleSocialBar() {
+            const bar = document.getElementById("socialBar");
+            const contactBar = document.getElementById("contactBar");
+            bar?.classList.toggle("active");
+            contactBar?.classList.toggle("active");
+        }
+
         function toggleMenu() {
             const header = document.getElementById('mainHeader');
             header.classList.toggle('active');
         }
 
-        function setActive(element) {
-            document.querySelectorAll('nav a, .mobile-nav a').forEach(link => link.classList.remove('active'));
-            element.classList.add('active');
-        }
+        // ✅ Smooth scrolling with offset adjustment
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    e.preventDefault();
+                    const headerOffset = 80; // Adjust based on your sticky header
+                    const elementPosition = target.offsetTop;
+                    const offsetPosition = elementPosition - headerOffset;
 
-        // ✅ Automatically highlight "About" link on page load (both mobile and desktop)
+                    window.scrollTo({
+                        top: offsetPosition,
+                        behavior: "smooth"
+                    });
+                }
+
+                // ✅ Close mobile menu on click
+                if (this.closest('.mobile-nav')) {
+                    toggleMenu();
+                }
+            });
+        });
+
+        // ✅ Set 'Home' active on load
         window.addEventListener('DOMContentLoaded', () => {
-            const desktopLink = document.querySelector('nav a[href="#home"]');
-            const mobileLink = document.querySelector('.mobile-nav a[href="#home"]');
+            const homeLinks = document.querySelectorAll('a[href="#home"]');
+            homeLinks.forEach(link => link.classList.add('active'));
+        });
 
-            // Activate both if needed
-            if (desktopLink) desktopLink.classList.add('active');
-            if (mobileLink) mobileLink.classList.add('active');
+        // ✅ Scroll-based menu highlighting
+        window.addEventListener('scroll', () => {
+            const sections = document.querySelectorAll('section[id]');
+            const scrollY = window.scrollY;
+            const offset = 100;
+
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop - offset;
+                const sectionHeight = section.offsetHeight;
+                const sectionId = section.getAttribute('id');
+
+                if (scrollY >= sectionTop && scrollY < sectionTop + sectionHeight) {
+                    document.querySelectorAll('nav a, .mobile-nav a').forEach(link => {
+                        link.classList.remove('active');
+                        if (link.getAttribute('href') === `#${sectionId}`) {
+                            link.classList.add('active');
+                        }
+                    });
+                }
+            });
+        });
+
+        const submitBtn = document.getElementById("submitBtn");
+
+        document.getElementById("emailForm").addEventListener("submit", async function (e) {
+            e.preventDefault();
+            const form = e.target;
+            const name = form.Name.value;
+            const email = form.Email.value;
+            const phone = form.Phone.value;
+            const message = form.Message.value;
+            const date = new Date().toLocaleString();
+            const to = 'rkmatrixcontactus@gmail.com';
+            const subject = `New Contact Form Submission from ${name} – ${date} – RKMatrix`;
+            // Build your HTML message
+            const htmlBody = `<!DOCTYPE html>
+                                                              <html>
+                                                                <head>
+                                                                  <style>
+                                                                    .box {
+                                                                      border: 2px solid #4CAF50;
+                                                                      padding: 20px;
+                                                                      font-family: Arial;
+                                                                      border-radius: 10px;
+                                                                      background: #f9f9f9;
+                                                                    }
+                                                                    h1 {
+                                                                      color: #4CAF50;
+                                                                    }
+                                                                    p {
+                                                                      font-size: 16px;
+                                                                      color: #333;
+                                                                      margin: 6px 0;
+                                                                    }
+                                                                  </style>
+                                                                </head>
+                                                                <body>
+                                                                  <div class="box">
+                                                                    <h1>📩 New Inquiry Received</h1>
+                                                                    <p><strong>Name:</strong> ${name}</p>
+                                                                    <p><strong>Email:</strong> ${email}</p>
+                                                                    <p><strong>Phone:</strong> ${phone}</p>
+                                                                    <p><strong>Message:</strong></p>
+                                                                    <p>${message}</p>
+                                                                    <p><strong>Date:</strong> ${date}</p>
+                                                                    <hr>
+                                                                    <p>This message was submitted via the RKMatrix Contact Us page.</p>
+                                                                  </div>
+                                                                </body>
+                                                              </html>`;
+
+            // Encode for safe transmission
+            const body = encodeURIComponent(htmlBody);
+            const formData = `to=${to}&subject=${subject}&body=${body}`;
+            const messageEl = document.getElementById("formMessage");
+            submitBtn.disabled = true;
+            submitBtn.innerText = "Sending...";
+            try {
+                const res = await fetch("https://script.google.com/macros/s/AKfycbyeZl1e-HNHIWeU2BOcANvoYym5vT1S75ErWmhTkUUQDL4C9ZmP41LrM7AARdTOYZo/exec", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/x-www-form-urlencoded"
+                    },
+                    body: formData
+                });
+
+                const text = await res.text();
+                // ✅ Show success message
+                messageEl.innerHTML = "✅ <strong>Thanks for contacting RKMatrix!</strong> 🎉 We're thrilled to hear from you. Your inquiry is on its way to our team, and we’ll respond promptly.<br><br>Let’s build something smart together.";
+                messageEl.style.backgroundColor = "#4caf50";
+                messageEl.style.color = "#fff";
+                messageEl.style.display = "block";
+
+                form.reset(); // optional: clear form
+            } catch (err) {
+                // ❌ Show error message
+                messageEl.innerHTML = "❌ Oops! Something went wrong.Please try again later.\n\n📞 You can also contact RKMatrix directly: \n 📧 Email: rkmatrixpvt @gmail.com\n📱 Phone: +91-8115122893, +91-7398789686, +91-9582161944";
+                messageEl.style.backgroundColor = "#e53935";
+                messageEl.style.color = "#fff";
+                messageEl.style.display = "block";
+            } finally {
+                submitBtn.disabled = false;
+                submitBtn.innerText = "Send Message";
+            }
+
+            // Auto-hide after 6 seconds (optional)
+            setTimeout(() => {
+                messageEl.style.display = "none";
+            }, 6000);
         });
     </script>
 </body>
